# lib/db/src/schema/index.ts
@@ -3,3 +3,5 @@ export * from "./faculty";
 export * from "./gallery";
 export * from "./admissions";
 export * from "./contacts";
+export * from "./conversations";
+export * from "./messages";
